# chess-dataset-creator

./: README.md  pyproject.toml
src/computer_use_chess/: __init__.py  chess_data.py
src/notebooks/: Image_Analysis.ipynb  Untitled.ipynb
src/tools/: click_annotator.py
